# get_paper_rs

./: .gitignore  Cargo.toml  README.md  build.ps1  build.sh
src/: main.rs  ui.rs
src/ui/: data.rs  network.rs
