[package]
name = "get_paper_rs"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = { version = "^1.4", features = ["fltk-bundled"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = "*"
serde_derive = "*"
serde_json = "*"
walkdir = "2.3.3"
open = "*"
fltk-grid = "0.3.1"
rand = "0.8.5"
