[package]
name = "get_paper_rs"
version = "0.3.3"
edition = "2021"
description = "An application to download CAIE past papers"

[profile.release]
lto = "fat"
codegen-units = 1

# cargo bundle --release
[package.metadata.bundle]
name = "get_paper_rs"
identifier = "com.get-paper-rs.muyunxi"
copyright = "Copyright (c) Mu Yunxi 2023. All rights reserved"
resources = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = { version = "^1.4", features = ["fltk-bundled"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = "*"
serde_derive = "*"
serde_json = "*"
walkdir = "2.3.3"
open = "*"
fltk-grid = "0.3.1"
rand = "0.8.5"
jemallocator = "0.3.2"
hotwatch = "0.5.0"
