[package]
name = "get_paper_rs"
version = "0.3.4"
edition = "2021"
description = "An application to download CAIE past papers"

# cargo bundle --release
[package.metadata.bundle]
name = "Get Paper Rust"
identifier = "com.iewnfod.getPaperRs"
version = "0.3.4"
copyright = "Copyright (c) Iewnfod 2023. All rights reserved."
short_description = "Get CAIE Past Papers"

[profile.release]
lto = "fat"
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = { version = "^1.4", features = ["fltk-bundled"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = "*"
serde_derive = "*"
serde_json = "*"
walkdir = "2.3.3"
open = "*"
fltk-grid = "0.3.1"
rand = "0.8.5"
hotwatch = "0.5.0"
dirs = "5.0.1"
anyhow = "1.0.75"
